--- a/posta-app/client/index.html
+++ b/posta-app/client/index.html
@@ -135,7 +135,6 @@
   
       <table id="history_parsel" class="table" align="center">
         <tr >
-          
           <th>Sender</th>
           <th>Sender branch</th>
           <th>Sender Timestamp</th>
@@ -181,7 +180,7 @@
           <td>{{sender.senderBranch}}</td>
           <td>{{sender.senderTS}}</td>
           <td>{{sender.receiverTS}}</td>
-          <td>{{sender.receiverBranch}}</td>parsel
+          <td>{{sender.receiverBranch}}</td>
           <td>{{sender.receiver}}</td>
         </tr>
       </table>
