--- a/posta-app/client/index.html
+++ b/posta-app/client/index.html
@@ -203,10 +203,10 @@
       </div>
 
       <div class="form-group">
-        <label>Delivery: Change Status of Parsel I1tem and add Delivery Timestamp</label><br>
+        <label>Delivery: Change Status of Parsel Item and add Delivery Timestamp</label><br>
         <h5 style="color:green;margin-bottom:2%" id="success_holder">Success! Tx ID: {{delivery_parsel}}</h5>
         <h5 style="color:red;margin-bottom:2%"   id="error_holder">Error: Please enter a valid Parsel Id</h5>
-        Enter a parsel id from available list abov1e: <input class="form-control" name="assetSelect" placeholder="Ex: 1" ng-model="holder.id">
+        Enter a parsel id from available list above: <input class="form-control" name="assetSelect" placeholder="Ex: 1" ng-model="holder.id">
         <!--  Enter delivery timestamp: <input class="form-control" name="assetSelect" placeholder="Ex: 2014090811" ng-model="holder.receiverTS"> -->
         <input id="transferSubmit" type="submit" value="Change" class="btn btn-primary" ng-click="deliveryParsel()">
       </div>
