--- a/app/client/index.html
+++ b/app/client/index.html
@@ -206,12 +206,12 @@
 
       <div class="form-group">
         <label>Accept: Create Inital Parsel Record</label>
-        <h5 style="color:green;margin-bottom:2%" id="success_create">Success! Tx ID: {{add_parsel}}</h5>
+        <h5 style="color:green;margin-bottom:2%" id="success_create">Success! Tx ID: {{accepted_parsel_id}}</h5>
         <br>
         Enter sender name: <input class="form-control input-field" type="text" placeholder=" Ex: John" ng-model="parsel.sender">
         Enter sender branch: <input class="form-control input-field" type="text" placeholder=" Ex: 002" ng-model="parsel.senderBranch">
-        Enter receiver name: <input class="form-control input-field" type="text" placeholder=" Ex: John" ng-model="parsel.receiver">
-        Enter receiver branch: <input class="form-control input-field" type="text" placeholder=" Ex: 002" ng-model="parsel.receiverBranch">
+        Enter receiver name: <input class="form-control input-field" type="text" placeholder=" Ex: Mary" ng-model="parsel.receiver">
+        Enter receiver branch: <input class="form-control input-field" type="text" placeholder=" Ex: 003" ng-model="parsel.receiverBranch">
 	      <input id="acceptParselId" type="submit" value="Create" class="btn btn-primary" ng-click="acceptParsel()">
       </div>
 
