--- a/app/client/index.html
+++ b/app/client/index.html
@@ -194,7 +194,7 @@
       </table>
 
       <div class="form-group">
-        <label>Query Parsels by Sender</label><br>
+        <label>Query Parsels by Sender</label><br/>
         <!--  Enter a sender name: <input id="createName" class="form-control input-field" type="text" placeholder=" Ex: Alex" ng-model="sender_name">
         <input id="querySender" type="submit" value="Query" class="btn btn-primary" ng-click="querySender()"> -->
       </div>
@@ -223,7 +223,7 @@
       </table>
 
       <div class="form-group">
-        <label>Accept: Create Inital Parsel Record</label>
+        <label>Accept: Create Inital Parsel Record</label><br/>
         <div class="alert alert-success" role="alert" id="success_create">
           Success! Tx ID: {{accepted_parsel_id}}
         </div>
